add Author to video for search
